--- a/style.css
+++ b/style.css
@@ -16,12 +16,24 @@ body
 
 .machine-side
 {
-	background-color: #FFC0CB;
+
 	width: 100px;
 	float: left;
 	display: inline-block;
 	height: 492px;
 	margin-top: 20px;
+	position:relative;
+	border-top-right-radius: 15px;
+	
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#e2e2e2+5,fefefe+11,bababa+44,fefefe+84 */
+	background: #e2e2e2; /* Old browsers */
+	background: -moz-linear-gradient(top, #e2e2e2 5%, #fefefe 11%, #bababa 44%, #fefefe 84%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(5%,#e2e2e2), color-stop(11%,#fefefe), color-stop(44%,#bababa), color-stop(84%,#fefefe)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #e2e2e2 5%,#fefefe 11%,#bababa 44%,#fefefe 84%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #e2e2e2 5%,#fefefe 11%,#bababa 44%,#fefefe 84%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #e2e2e2 5%,#fefefe 11%,#bababa 44%,#fefefe 84%); /* IE10+ */
+	background: linear-gradient(to bottom, #e2e2e2 5%,#fefefe 11%,#bababa 44%,#fefefe 84%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe',GradientType=0 ); /* IE6-9 */
 }
 
 .machine-top , .machine-center , .machine-bottom
@@ -77,6 +89,62 @@ ul.slot-three > li
 	height:166.65px;
 }
 
+.lever-btn
+{
+	position: absolute;
+	top: -9px;
+	width: 100%;
+	cursor: pointer;
+	background-color: transparent;
+	border: 0px;
+}
+
+
+
+.lever-design {
+	border-radius: 50%;
+	width: 90px;
+	height: 90px; 
+	
+	background-image: -moz-radial-gradient(45px 45px 45deg, circle cover, yellow 0%, orange 100%, red 95%);
+	background-image: -webkit-radial-gradient(45px 45px, circle cover, yellow, orange);
+	background-image: radial-gradient(45px 45px 45deg, circle cover, yellow 0%, orange 100%, red 95%);
+	
+	margin:0 auto;
+	position:relative;
+}
+
+.lever-label
+{
+	margin-top: 0px;
+	position: absolute;
+	top: 33px;
+	left: 19px;
+	font-family: Arial;
+	color: #FF9000;
+	font-size: 21px;
+	text-transform: uppercase;
+}
+
+.lever-hole-design
+{
+
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,45484d+89 */
+	background: #000000; /* Old browsers */
+	background: -moz-linear-gradient(top, #000000 0%, #45484d 89%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000000), color-stop(89%,#45484d)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #000000 0%,#45484d 89%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #000000 0%,#45484d 89%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #000000 0%,#45484d 89%); /* IE10+ */
+	background: linear-gradient(to bottom, #000000 0%,#45484d 89%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#45484d',GradientType=0 ); /* IE6-9 */
+
+	width: 31px;
+	height: 446px;
+	margin: 20px auto 0 auto;
+	
+
+}
 /*--------------------------------------------------------------
 11.0 Media Queries
 --------------------------------------------------------------*/
